# AskMySearchRAG

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
data/: AI Ethics.txt  AI in Finance.txt  AI in Healthcare.txt  AI.txt  Computer Vision.txt  Deep Learning.txt  Machine Learning.txt  NLP.txt  Neural Networks.txt  Supervised Learning.txt  Transformers.txt  artificial_intelligence.txt  deep_learning.txt  generatedata.py  generatedynamicdata.py  machine_learning.txt  natural_language_processing.txt
ingestion/: ingest.py
rag/: contextprompt.py  llmanswer.py
rerank/: reranker.py
vectordbretrieval/: BM25_store.py  embeddings.py  hybrid.py  vector_store.py
