[project]
name = "askmysearchrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chromadb>=1.5.5",
    "datasets>=4.7.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-text-splitters>=1.1.1",
    "onnxruntime<=1.19.2",
    "openai",
    "pydantic",
    "ragas",
    "rank-bm25",
    "sentence-transformers<3.0",
    "transformers<4.42",
    "numpy<2",
    "streamlit",
    "torch<=2.2.2",
    "uvicorn",
    "langchain-huggingface>=1.2.1",
    "langchain-chroma>=1.1.0",
]
